# lidl-receipt-client

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lidl_receipt_client/: analyze.py  main.py  model.py  receipts.py
